Node z-index fix because can't click

--- a/style.css
+++ b/style.css
@@ -232,7 +232,7 @@ body.editing .node__text {
     align-items: start;
     justify-content: center;
     gap: 24px;
-    z-index: 2;
+    z-index: 3;
 }
 
 .nodesLegend__line {
